--- a/thesis/pacBio/pacBio.tex
+++ b/thesis/pacBio/pacBio.tex
@@ -3,6 +3,7 @@
 \graphicspath{{im/}{pacBio/im/}}
 
 \chapter{Dynamic regulation of HIV-1 mRNA populations analyzed by single-molecule enrichment and long-read sequencing}
+\label{chapPacBio}
 
 \section{Abstract}
 Alternative RNA splicing greatly expands the repertoire of proteins encoded by genomes. Next-generation sequencing (NGS) is attractive for studying alternative splicing because of the efficiency and low cost per base, but short reads typical of NGS only report mRNA fragments containing one or few splice junctions. Here, we used single-molecule amplification and long-read sequencing to study the HIV-1 provirus, which is only 9700 bp in length, but encodes nine major proteins via alternative splicing. Our data showed that the clinical isolate \hivEight{} produces at least 109 different spliced RNAs, including a previously unappreciated $\approximately{}1$ kb class of messages, two of which encode new proteins. HIV-1 message populations differed between cell types, longitudinally during infection, and among T cells from different human donors. These findings open a new window on a little studied aspect of HIV-1 replication, suggest therapeutic opportunities and provide advanced tools for the study of alternative splicing. 
@@ -10,7 +11,7 @@ Alternative RNA splicing greatly expands the repertoire of proteins encoded by g
 \section{Introduction}
 Alternative splicing greatly expands the information content of genomes by producing multiple mRNAs from individual transcription units. Approximately 95\% of human genes with multiple exons encode RNA transcripts that are alternatively spliced, and mutations that affect alternative splicing are associated with diseases ranging from cystic fibrosis to chronic lymphoproliferative leukemia \citep{Pan2008,Wang2008,Pagani2005,Wang2007,Wang2011}. Work to decipher an RNA `splicing code' has revealed that multiple interactions between trans-acting factors and RNA elements determine splicing patterns, though regulation is little understood for most genes \citep{Barash2010}.
 
-The integrated HIV-1 provirus is $\approximately{}9700$ bp in length and has a single transcription start site, but according to the published literature yields at least 47 different mRNAs encoding 9 proteins or polyproteins, making HIV an attractive model for studies of alternative splicing \citep{Purcell1993}. HIV mRNAs fall into three classes: the unspliced RNA genome, which encodes Gag/Gag-Pol; partially spliced transcripts, $\approximately{}4$ kb in length, encoding Vif, Vpr, a one-exon version of Tat, and Env/Vpu; and completely spliced mRNAs of roughly 2 kb encoding Tat, Rev and Nef (Figure \ref{figDonorAccept}A). Additional rare `cryptic' splice donors (\fivePrime{} splice sites) and acceptors (\threePrime{} splice sites) contribute even more mRNAs \citep{Benko1990,Carrera2010,Lutzelberger2006,Salfeld1990,Schwartz1990,Smith1992}. A complex array of positive and negative cis-acting elements surrounding each splice site regulates the relative abundance of the HIV-1 mRNAs, and disrupting the balance of message ratios impairs viral replication in several models \citep{Stoltzfus2009,Bakkour2007,Brass2008,Jablonski2009,Konig2008,Tranell2011,Zhou2008,Zhu2011}. Studies have suggested strain-specific splicing patterns may exist \citep{Purcell1993,Saltarelli1996,Delgado2012}. However, detailed studies of complete message populations have not been reported for clinical isolates of HIV-1. 
+The integrated HIV-1 provirus is $\approximately{}9700$ bp in length and has a single transcription start site, but according to the published literature yields at least 47 different mRNAs encoding 9 proteins or polyproteins, making HIV an attractive model for studies of alternative splicing \citep{Purcell1993}. HIV mRNAs fall into three classes: the unspliced RNA genome, which encodes Gag/Gag-Pol; partially spliced transcripts, $\approximately{}4$ kb in length, encoding Vif, Vpr, a one-exon version of Tat, and Env/Vpu; and completely spliced mRNAs of roughly 2 kb encoding Tat, Rev and Nef (Figure \ref{figDonorAccept}A). Additional rare `cryptic' splice donors (\fivePrime{} splice sites) and acceptors (\threePrime{} splice sites) contribute even more mRNAs \citep{Benko1990,Carrera2010,Luetzelberger2006,Salfeld1990,Schwartz1990,Smith1992}. A complex array of positive and negative cis-acting elements surrounding each splice site regulates the relative abundance of the HIV-1 mRNAs, and disrupting the balance of message ratios impairs viral replication in several models \citep{Stoltzfus2009,Bakkour2007,Brass2008,Jablonski2009,Konig2008,Tranell2011,Zhou2008,Zhu2011}. Studies have suggested strain-specific splicing patterns may exist \citep{Purcell1993,Saltarelli1996,Delgado2012}. However, detailed studies of complete message populations have not been reported for clinical isolates of HIV-1. 
 
 \begin{figure}
 	\centering
@@ -57,7 +58,7 @@ To estimate the minimum total number of transcripts present, partial sequence re
 
 \begin{figure}
 	\centering
-	\caption[Spliced transcripts produced from \hivEight{}]{Spliced transcripts produced from \hivEight{}. \hivEight{} transcripts in T cells for which the full message structure was determined are shown arranged by size class (unspliced genome, partially spliced or 4 kb, completely spliced or 2 kb, and a new completely spliced 1 kb class). Thick bars correspond to exons and thin lines to excised introns. For the well-conserved transcripts, encoded proteins are indicated. The relative abundance of each transcript within its size class is indicated by color according to the scale displayed. Asterisks denote transcripts that have not been reported previously to our knowledge. Of the 47 conserved HIV-1 transcripts, three were detected in fewer than five reads (one tat and two \textit{env}/\textit{vpu} messages, indicated, $\diamond$) and two messages were not detected and are not shown (one encoding Vpr and one encoding Env/Vpu). Depicted non-conserved transcripts (using novel or cryptic splice sites) were each detected in at least five independent sequence reads across samples from at least two different human T-cell donors.}
+	\caption[Spliced transcripts produced from \hivEight{}]{Spliced transcripts produced from \hivEight{}. \hivEight{} transcripts in T cells for which the full message structure was determined are shown arranged by size class (unspliced genome, partially spliced or 4 kb, completely spliced or 2 kb, and a new completely spliced 1 kb class). Thick bars correspond to exons and thin lines to excised introns. For the well-conserved transcripts, encoded proteins are indicated. The relative abundance of each transcript within its size class is indicated by color according to the scale displayed. Asterisks denote transcripts that have not been reported previously to our knowledge. Of the 47 conserved HIV-1 transcripts, three were detected in fewer than five reads (one \textit{tat} and two \textit{env}/\textit{vpu} messages, indicated, $\diamond$) and two messages were not detected and are not shown (one encoding Vpr and one encoding Env/Vpu). Depicted non-conserved transcripts (using novel or cryptic splice sites) were each detected in at least five independent sequence reads across samples from at least two different human T-cell donors.}
 	\ref{figTranscripts}
 \end{figure}
 
@@ -68,7 +69,7 @@ Several groups have demonstrated tissue- and differentiation-specific splicing o
 For studies of transcript dynamics, reads from primer pairs 1.2, 1.3 and 1.4 containing junctions between D1 or any donor and each of five mutually exclusive acceptors, A3, A4c, A4a, A4b, A5 and A5a, were collected and their ratios calculated. 
 
 \subsection{Statistical analysis}
-Statistical modeling was performed using generalized linear modeling as described in Supplementary Report S2. All analyses were performed in R 2.14.0 (R Development Core) \citep{RFIXTHIS}. 
+Statistical modeling was performed using generalized linear modeling as described in Supplementary Report S2. All analyses were performed in R 2.14.0 (R Development Core) \citep{RCoreTeam2012}. 
 
 \subsection{Data access}
 Sequence data is available in the SRA database with the following accession numbers: SRP014319.
@@ -91,7 +92,7 @@ Most of the new splice sites adhered to consensus sequences for the standard spl
 \subsection{Structures of spliced \hivEight{} RNAs}
 To quantify the populations of HIV-1 transcripts, we aligned all reads to the collection of 47 well-established spliced HIV-1 transcripts and detected 45 of them (Figure 2). We additionally aligned reads to the \hivEight{} genome allowing all possible combinations of splice junctions---canonical, cryptic or novel---determined from the sequencing data (Figure \ref{figDonorAccept}), yielding an additional 32 complete transcripts, 19 of which were novel. The data also provide evidence for more novel splice junctions but in incomplete sequences, implying the existence of additional new transcripts (Supplementary Table S4 and Supplementary Report S1). The full data set taken together provides evidence for least 109 different \hivEight{} transcripts in primary T cells.
 
-Amplification primers that isolated the two main classes of spliced messages allowed us to determine the ratios of mRNAs in each (Figure 2 and Supplementary Table S5). Within the partially spliced class of transcripts, \textit{env}/\texit{vpu}, \textit{tat} (1-exon), \textit{vpr} and \textit{vif} messages existed in an average ratio of 96:4:$<1$:$<1$ in \cdFour{} T cells. The ratio of \texit{nef}:\texit{rev}:\texit{tat}:\texit{vpr} within the $\approximately{}2$ kb transcript class was 64:33:3:$<1$. Consistent with previous reports, the most abundant transcript in each class contained the splice junction from D1 to A5 (D1\^{}A5)---an \textit{env}/\textit{vpu} transcript contributing 64\% of the partially spliced class, and a completely spliced \textit{nef} transcript contributing 47\% of $\approximately{}2$ kb messages (Figure 2) \citep{Purcell1993,Guatelli1990}. The relatively low abundance of transcripts encoding Tat suggests that Tat sufficiently stimulates HIV transcription elongation at low concentrations, or that the \textit{tat} transcripts must be efficiently translated. Due to biases inherent in the reverse transcription step, we could only compare transcripts within each size class, and we note that our methods have not been validated for empirical quantification. However, the ratios were roughly confirmed using overlapping sequence reads obtained with alternate primer pairs and by end point RT-PCR analysis of HIV-1 RNAs (data not shown).
+Amplification primers that isolated the two main classes of spliced messages allowed us to determine the ratios of mRNAs in each (Figure 2 and Supplementary Table S5). Within the partially spliced class of transcripts, \textit{env}/\textit{vpu}, \textit{tat} (1-exon), \textit{vpr} and \textit{vif} messages existed in an average ratio of 96:4:$<1$:$<1$ in \cdFour{} T cells. The ratio of \textit{nef}:\textit{rev}:\textit{tat}:\textit{vpr} within the $\approximately{}2$ kb transcript class was 64:33:3:$<1$. Consistent with previous reports, the most abundant transcript in each class contained the splice junction from D1 to A5 (D1\^{}A5)---an \textit{env}/\textit{vpu} transcript contributing 64\% of the partially spliced class, and a completely spliced \textit{nef} transcript contributing 47\% of $\approximately{}2$ kb messages (Figure 2) \citep{Purcell1993,Guatelli1990}. The relatively low abundance of transcripts encoding Tat suggests that Tat sufficiently stimulates HIV transcription elongation at low concentrations, or that the \textit{tat} transcripts must be efficiently translated. Due to biases inherent in the reverse transcription step, we could only compare transcripts within each size class, and we note that our methods have not been validated for empirical quantification. However, the ratios were roughly confirmed using overlapping sequence reads obtained with alternate primer pairs and by end point RT-PCR analysis of HIV-1 RNAs (data not shown).
 
 Exons 2 and 3 are non-coding exons whose inclusion in transcripts other than \textit{vif} and \textit{vpr} has no known function. We found that they were included in other messages infrequently, each in $\approximately{}7$--8\% of transcripts in the $\approximately{}2$ kb completely spliced class of transcripts and 5\% of partially spliced transcripts accumulating in T cells. This is consistent with previous measurements in the partially spliced class but much lower than has been estimated for completely spliced transcripts in HeLa cells, suggesting cell-type-specific splicing patterns may influence inclusion of these exons \citep{Purcell1993}. 
 
@@ -135,7 +136,7 @@ Using these methods, we have detected significant variations between HIV message
 
 Sequences from the 89.6 viral strain revealed a class of small ($\approximately{}1$ kb) completely spliced transcripts, most contributed by splicing to a new poorly conserved acceptor A8c. These encoded two new proteins, one of which had Tat activity, and we showed that another, a Rev-Nef fusion termed Ref, could be detected in cells. \hivEight{} is a particularly cytotoxic virus isolated from the CSF of a patient, and it forms unusually large syncitia in macrophages \citep{Collman1992}. The abundance of 1-kb transcripts produced by this virus provides a possible explanation for its unique properties. In addition to the novel acceptor A8c, we have also identified 3 putative novel splice donors and 11 putative novel acceptors, which require further studied to clarify possible functions.
 
-The wealth of new messages found here in \hivEight{} and in other HIV-1 isolates suggests there may be ongoing evolution of novel splice sites and new ORFs. Because splice acceptors in HIV-1 are weak \citep{Stoltzfus2009}, mutations creating sequences that even slightly resemble the \threePrime{} splice site consensus may be occasionally recruited as novel acceptors, creating new mRNAs. In fact, new splice signals may evolve with relative ease---it has been estimated that reasonable matches to the consensus for splice donors, acceptors and branch-point sites occur within random sequence every 290, 490 and 24 bp, respectively \citep{Burge1999}, though sequence substitutions in HIV are usually also constrained by overlapping viral coding regions. We and others have observed appearance of novel exons within the major HIV-1 introns \citep{Benko1990,Lutzelberger2006,Salfeld1990}. Such long stretches of RNA relatively devoid of competing splice sites may be particularly poised to evolve new signals. On the other hand, most of the putative novel splice acceptors we observed clustered near previously identified acceptors in HIV-1, suggesting that conserved cis-acting splicing signals may recruit factors that act promiscuously on new nearby sequences. Clusters of splice sites might also provide redundancies that protect vital messages, as suggested previously \citep{Abbink2008,Verhoef2001}. Frequent evolution of new splice sites may allow viruses to test out new combinations of exons, potentially yielding new RNAs and proteins, like those reported here. However, such novelty must compete with immune constraints---unstable novel polypeptides like Ref can be targeted to the proteosome and presented on MHC molecules as new epitopes for immune recognition.
+The wealth of new messages found here in \hivEight{} and in other HIV-1 isolates suggests there may be ongoing evolution of novel splice sites and new ORFs. Because splice acceptors in HIV-1 are weak \citep{Stoltzfus2009}, mutations creating sequences that even slightly resemble the \threePrime{} splice site consensus may be occasionally recruited as novel acceptors, creating new mRNAs. In fact, new splice signals may evolve with relative ease---it has been estimated that reasonable matches to the consensus for splice donors, acceptors and branch-point sites occur within random sequence every 290, 490 and 24 bp, respectively \citep{Burge1999}, though sequence substitutions in HIV are usually also constrained by overlapping viral coding regions. We and others have observed appearance of novel exons within the major HIV-1 introns \citep{Benko1990,Luetzelberger2006,Salfeld1990}. Such long stretches of RNA relatively devoid of competing splice sites may be particularly poised to evolve new signals. On the other hand, most of the putative novel splice acceptors we observed clustered near previously identified acceptors in HIV-1, suggesting that conserved cis-acting splicing signals may recruit factors that act promiscuously on new nearby sequences. Clusters of splice sites might also provide redundancies that protect vital messages, as suggested previously \citep{Abbink2008,Verhoef2001}. Frequent evolution of new splice sites may allow viruses to test out new combinations of exons, potentially yielding new RNAs and proteins, like those reported here. However, such novelty must compete with immune constraints---unstable novel polypeptides like Ref can be targeted to the proteosome and presented on MHC molecules as new epitopes for immune recognition.
 
 HIV has likely evolved to produce calibrated message populations in T cells which seem to be altered with relative ease, as in infection in HOS cells, suggesting that therapeutic disruption of correct splicing may be feasible. A few studies have begun to explore small molecule therapy to disrupt HIV-1 splicing \citep{Bakkour2007,Tranell2011}. Several factors could be responsible for the differences we observed between HOS and T cells, including hnRNP A/B and H, SC35, SF2/ASF and SRp40 \citep{Caputi2004,Zahler2004}. Inhibition of SF2/ASF has already been shown to abrogate HIV-1 replication in vitro \citep{Bakkour2007}. Thus the lability seen here for function of these factors suggests they may be attractive antiretroviral targets. 
 
